Regreso al estado del commit 22cf394 manteniendo el historial