@@ -14,6 +14,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import com.tutorias.tutorias_backend.security.JwtAuthenticationFilter;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -36,13 +37,15 @@ public class SecurityConfig {
                         .frameOptions(frame -> frame.disable())
                         .contentSecurityPolicy(csp -> csp
                                 .policyDirectives(
-                                        "default-src 'self'; " +
                                         "script-src 'self' 'unsafe-inline' 'unsafe-eval'; " +
-                                        "style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; " +
-                                        "img-src 'self' data: https:; " +
-                                        "connect-src *;")))
+                                        "style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; " +
+                                        "img-src 'self' data:; " +
+                                        "connect-src 'self'; " +
+                                        "frame-src 'self'; " +
+                                        "object-src 'none'; " +
+                                        "base-uri 'self'; " +
+                                        "form-action 'self';")))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers("/auth/**", "/error").permitAll()
                         // Endpoints públicos según backend.md regla 11
                         .requestMatchers(org.springframework.http.HttpMethod.GET, "/tutores/**", "/materias/**", "/departamentos/**", "/faq").permitAll()
@@ -77,17 +80,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Usamos setAllowedOrigins para los dominios conocidos
-        configuration.setAllowedOrigins(Arrays.asList(
-            "https://jimmydvo0823.github.io",
-            "http://localhost:5173",
-            "http://127.0.0.1:5173"
-        ));
+        configuration.setAllowedOriginPatterns(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
         configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L); // Cache de preflight por 1 hora
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
